--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -46,6 +46,7 @@ r.DynamicGlobalIlluminationMethod=1
 r.ReflectionMethod=1
 r.Shadow.Virtual.Enable=1
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
+r.CustomDepth=3
 
 [/Script/WorldPartitionEditor.WorldPartitionEditorSettings]
 CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
@@ -143,3 +144,6 @@ NetServerMaxTickRate=60
 +CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 
+
+[CoreRedirects]
++PropertyRedirects=(OldName="/Script/Blaster.CombatComponent.HandSocketName",NewName="/Script/Blaster.CombatComponent.RightHandSocketName")
